--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,41 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
+.img-container {
   height: 100vh;
   width: 100%;
   background: url("/img/spiderweb.jpg") no-repeat center center/cover;
+}
+#background {
+  height: 100vh;
+  width: 100vw;
+  background: rgba(0, 0, 0, 0);
+}
+
+.leaf {
+  height: 100px;
+  width: 100px;
+
+  position: absolute;
+  top: 0;
+  z-index: 2;
+  left: 45%;
+  background: url("/img/leaf.png") no-repeat center center/cover;
+  animation-name: leaf-animation;
+  animation-duration: 2s;
+  animation-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes leaf-animation {
+  0% {
+    top: 0%;
+  }
+  50% {
+    top: 10%;
+  }
+  100% {
+    top: 45%;
+  }
 }
